--- a/cms_package/pages/index.html
+++ b/cms_package/pages/index.html
@@ -55,15 +55,14 @@
     </div>
     
     <div class="events-grid">
-      {{#each blogs featured=true limit=2 sort="publishedAt" order="asc"}}
+      {{#each events limit=2 sort="date" order="asc"}}
       <article class="event-card">
         <div class="event-meta">
           <span class="event-status">Upcoming</span>
-          <span class="event-date">{{publishedAt}}</span>
+          <span class="event-date">{{date}}</span>
         </div>
         <div class="event-info">
           <h3 class="event-title">{{name}}</h3>
-          <p class="event-location">{{postSummary}}</p>
         </div>
         <div class="event-cta">
           <a href="{{url}}" class="btn btn-primary">Get Tickets</a>
@@ -93,18 +92,19 @@
     </div>
     
     <div class="merch-grid">
-      {{#each team limit=3 sort="order" order="asc"}}
-      <a href="#" class="merch-card">
+      {{#each merch limit=3 sort="publishedAt" order="desc"}}
+      <a href="{{url}}" class="merch-card">
         <div class="merch-image">
-          <div class="merch-image-inner"></div>
-          <span class="merch-placeholder">{{name}} Image</span>
-          {{#if email}}
-          <span class="merch-badge">{{email}}</span>
-          {{/if}}
+          <div class="merch-image-inner">
+            {{#if merch}}
+            <img src="{{merch}}" alt="{{name}}" style="width:100%;height:100%;object-fit:cover;">
+            {{/if}}
+          </div>
+          <span class="merch-placeholder">{{name}}</span>
         </div>
         <div class="merch-details">
           <h3 class="merch-name">{{name}}</h3>
-          <span class="merch-price">{{role}}</span>
+          <span class="merch-price">${{price}}</span>
         </div>
       </a>
       {{/each}}
