--- a/cms_package/pages/index.html
+++ b/cms_package/pages/index.html
@@ -56,16 +56,23 @@
     
     <div class="events-grid">
       {{#each events limit=2 sort="date" order="asc"}}
-      <article class="event-card">
-        <div class="event-meta">
-          <span class="event-status">Upcoming</span>
-          <span class="event-date">{{date}}</span>
+      <article class="event-card" style="position: relative; overflow: hidden;">
+        {{#if event}}
+        <div style="position: absolute; inset: 0; z-index: 0;">
+          <img src="{{event}}" alt="{{name}}" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.3;">
         </div>
-        <div class="event-info">
-          <h3 class="event-title">{{name}}</h3>
-        </div>
-        <div class="event-cta">
-          <a href="{{url}}" class="btn btn-primary">Get Tickets</a>
+        {{/if}}
+        <div style="position: relative; z-index: 1;">
+          <div class="event-meta">
+            <span class="event-status">Upcoming</span>
+            <span class="event-date">{{date}}</span>
+          </div>
+          <div class="event-info">
+            <h3 class="event-title">{{name}}</h3>
+          </div>
+          <div class="event-cta">
+            <a href="{{url}}" class="btn btn-primary">Get Tickets</a>
+          </div>
         </div>
       </article>
       {{/each}}
