--- a/cms_package/pages/index.html
+++ b/cms_package/pages/index.html
@@ -57,9 +57,9 @@
     <div class="events-grid">
       {{#each events limit=2 sort="date" order="asc"}}
       <article class="event-card" style="position: relative; overflow: hidden;">
-        {{#if event}}
+        {{#if image}}
         <div style="position: absolute; inset: 0; z-index: 0;">
-          <img src="{{event}}" alt="{{name}}" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.3;">
+          <img src="{{image}}" alt="{{name}}" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.3;">
         </div>
         {{/if}}
         <div style="position: relative; z-index: 1;">
